# emojify

./: .gitignore  AppImageBuilder.yml  README  README.md  meson.build  resources.gresource.xml  xyz.riothedev.Emojify.gschema.xml  xyz.riothedev.emojify.json
.github/workflows/: publish-aur.yml  release.yml
ci/: generate_pkgbuild.py
data/: meson.build  xyz.riothedev.Emojify.desktop  xyz.riothedev.Emojify.gschema.xml  xyz.riothedev.emojify.desktop  xyz.riothedev.emojify.gschema.xml  xyz.riothedev.emojify.metainfo.xml
data/css/: style.css
include/: EmojiManager.hpp  SettingsManager.hpp  config.h.in
include/windows/: EmojiWindow.hpp  LoadingWindow.hpp  SettingsWindow.hpp
src/: EmojiManager.cpp  SettingsManager.cpp  main.cpp  meson.build
src/windows/: EmojiWindow.cpp  LoadingWindow.cpp  SettingsWindow.cpp
template/emojify-bin/: PKGBUILD
tools/: create_emoji_list.py
